fix: #264 [ios] Search component input text slightly misaligned

--- a/src/vue-components/search/search.ios.styl
+++ b/src/vue-components/search/search.ios.styl
@@ -25,7 +25,7 @@
 
 .q-search-input
   padding 0 35px
-  height auto
+  height 30px
   border-radius $generic-border-radius
   font-weight 400
   box-shadow $shadow-1
@@ -33,7 +33,7 @@
   border 0
   outline 0
   font-size .9rem
-  line-height 30px
+  line-height 1
   background rgba(0, 0, 0, .08)
   transition all 300ms ease
 
