--- a/src/vue-components/search/search.mat.styl
+++ b/src/vue-components/search/search.mat.styl
@@ -20,7 +20,7 @@
 
 .q-search-input
   padding 0 45px
-  height auto
+  height 38px
   border-radius $generic-border-radius
   font-weight 400
   box-shadow $shadow-1
@@ -28,7 +28,7 @@
   border 0
   outline 0
   font-size 1rem
-  line-height 38px
+  line-height 1
   background white
   transition all .2s ease
 
